--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Afnan Ahmad
 description: Short link redirect service
-baseurl: ""
-url: "https://afnanahmad.github.io/redirect/"
+baseurl: "/redirect"
+url: "https://afnanahmad.github.io"
 
 # Developer-focused theme with terminal/code editor aesthetic
 remote_theme: b2a3e8/jekyll-theme-console
@@ -13,8 +13,11 @@ header_pages:
 # Style options: dark (default), light, hacker, nord
 style: dark
 
-# Use Hack font (monospace developer font)
-google_fonts: false
+# Disable Google Fonts and use Hack font instead
+disable_google_fonts: true
+
+# Allow Hack font CDN in Content Security Policy (extends the existing style-src and font-src)
+csp_extra: ""
 
 # Footer text
 footer: 'Follow me on <a href="https://github.com/afnanahmad">GitHub</a>'
